libycp/testsuite/tests/errors/Notifications10.ycp

# ---------------------------------------------------------
#
#  Filename:    Notifications.ycp
#
#  Purpose:     test cases for YCP test
#
#  Creator:     jd@suse.de
#
#  Maintainer:  jd@suse.de
#
# ---------------------------------------------------------

// select with negative index
{
    list  node1 = [ 1, 2 ];
    list  node2 = [ 3, 4 ];
    list  node3 = [ 5, 6 ];
    list  node4 = [ node2, node3 ];
    list  node5 = [ node1, node4 ];
    list  node6 = [ 7 ];
    list  node7 = [ node5, node6 ];

    return( select( node7, -1, nil ) == nil );
//  "test case select for lists with negative index finished" 
}

